--- a/index.html
+++ b/index.html
@@ -2,41 +2,47 @@
 <html class="no-js" lang="">
 
 <head>
-  <meta charset="utf-8">
-  <title>Memory game</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <title>Small memory game</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 
-  <meta name="theme-color" content="#fafafa">
+    <meta name="theme-color" content="#fafafa">
 
-  <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+    <script src="//unpkg.com/alpinejs" defer></script>
 </head>
 
 <body>
 
-<div x-data="game()" class="px-10 flex items-center justify-center min-h-screen">
+<div x-data="game()" class="px-10 py-4 flex items-center justify-center min-h-screen">
 
-  <h1 class="fixed top-0 right-0 p-10 font-bold text-3xl">
-    <span x-text="points"></span>
-    <span class="text-xs">pts</span>
-  </h1>
+    <h1 class="fixed top-0 right-0 p-10 font-bold text-3xl">
+        <span x-text="points"></span>
+        <span class="text-xs">pts</span>
 
-  <div class="grid flex-1 grid-cols-6 gap-10">
+        <button @click="reset()"
+                class="border border-red-500 bg-red-500 text-white rounded-md px-4 py-2 m-2 transition duration-500 ease select-none hover:bg-red-600 focus:outline-none focus:shadow-outline">
+            Reset
+        </button>
+    </h1>
 
-    <template x-for="card in cards">
-      <div class="h-32 bg-gray-300 w-32 cursor-pointer flex"
-           :style="'background:' + (card.flipped ? card.color : '#ddd')"
-           @click="flipCard(card)">
+    <div class="grid gap-2 grid-cols-6">
 
-        <div x-show="card.cleared"
-             class="w-full text-4xl font-bold"
-             style="text-align: center;align-self: center">X</div>
-      </div>
-    </template>
-  </div>
+        <template x-for="card in cards">
+            <div class="h-32 bg-gray-300 w-32 cursor-pointer flex"
+                 :style="'background:' + (card.flipped ? card.color : '#ddd')"
+                 @click="flipCard(card)">
+
+                <div x-show="card.cleared"
+                     class="w-full text-4xl font-bold"
+                     style="text-align: center;align-self: center">X
+                </div>
+            </div>
+        </template>
+    </div>
 </div>
 
 <div x-data="{message: 'sdadasdas', show:false}"
@@ -44,8 +50,8 @@
      @flash.window="message = $event.detail.message; show = true; setTimeout(() => show=false,850)"
      class="fixed bottom-0 right-0 text-white bg-blue-500 p-2 mb-4 mr-4 rounded">
 
-  <span x-text="message" class="pr-4"></span>
-  <button @click="show = false">&times;</button>
+    <span x-text="message" class="pr-4"></span>
+    <button @click="show = false">&times;</button>
 
 </div>
 
